# lingvo

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compare.py  docker-compose.yml  exceptions.py  manage.py  pyproject.toml  pytest.ini
.github/workflows/: python-publish.yml
lang/: admin.py  apps.py  compare.py  forms.py  messanges.py  models.py  structures.py  translate.py  urls.py  utils.py  views.py
lang/migrations/: 0001_initial.py  0002_translate_language_input_translate_language_output_and_more.py  0003_alter_translate_author_alter_translate_file_one_and_more.py  0004_translate_created_at.py
lang/static/lang/css/: lang.css
lang/static/lang/java_script/: lang.js
lang/tests/: conftest.py  test_compare.py  test_translate.py
lingvo/: asgi.py  settings.py  urls.py  wsgi.py
templates/lang/: base.html  index.html  login.html  main.html  register.html  translate_delete.html  translate_detail.html  translates.html
