[tool.poetry]
name = "lingvo"
version = "0.1.0"
description = ""
authors = ["ukastsiukevich <grun_gespenst@tut.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.7"
dotenv = "^0.9.9"
googletrans = "4.0.0rc1"
gTTS = "2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
