[tool.poetry]
name = "lingvo"
version = "0.1.0"
description = ""
authors = ["ukastsiukevich <grun_gespenst@tut.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.7"
dotenv = "^0.9.9"
googletrans = "4.0.0rc1"
gTTS = "2.5.2"
flake8 = "^7.1.2"
python-docx = "^1.1.2"
pytest = "^8.3.5"
pytest-django = "^4.10.0"
mixer = "^7.2.2"
ruff = "^0.11.2"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lingvo.settings"